[tool.poetry]
name = "reddit-bot"
version = "0.1.0"
description = "Make simple posts from reddit"
authors = ["stupidcabbage <vanya@gutche.ru>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "reddit_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpraw = "^7.7.1"
d = "^0.2.2"
vkbottle = "^4.3.12"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.1"
aiohttp = "^3.8.5"
decorator = "^5.1.1"
async-google-trans-new = "^1.4.6"
requests-toolbelt = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
